--- a/RD3/Views/EditProjectView.xaml
+++ b/RD3/Views/EditProjectView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="RD3.Views.EditBatchView"
+    x:Class="RD3.Views.EditProjectView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -49,27 +49,17 @@
                 <TextBox
                     Width="200"
                     VerticalAlignment="Center"
-                    hc:InfoElement.Title="{ex:Language Key='Id'}"
-                    IsEnabled="False"
+                    hc:InfoElement.Title="{ex:Language Key='Name'}"
+                    IsEnabled="{Binding Enable}"
                     Style="{StaticResource TextBoxExtend}"
-                    Text="{Binding Batch.Id}" />
+                    Text="{Binding Batch.Name}" />
                 <TextBox
                     Width="200"
                     VerticalAlignment="Center"
                     hc:InfoElement.Title="{ex:Language Key='Name'}"
                     IsEnabled="{Binding Enable}"
                     Style="{StaticResource TextBoxExtend}"
-                    Text="{Binding Batch.Name}" />
-                <hc:CheckComboBox
-                    Name="cmbReactor"
-                    MaxWidth="200"
-                    MaxHeight="60"
-                    hc:InfoElement.ShowClearButton="True"
-                    hc:InfoElement.Title="{ex:Language Key='Reactor'}"
-                    IsEnabled="{Binding Enable}"
-                    ItemsSource="{Binding ReactorList}"
-                    ShowSelectAllButton="True"
-                    Style="{StaticResource CheckComboBoxPlus}" />
+                    Text="{Binding Project.Name}" />
                 <hc:DateTimePicker
                     Width="200"
                     hc:InfoElement.ShowClearButton="True"
