--- a/RD3/Views/IndexView.xaml
+++ b/RD3/Views/IndexView.xaml
@@ -2049,9 +2049,13 @@
                                             <TextBlock Text="{Binding Temp}" />
                                             <TextBlock Text="/" />
                                             <TextBlock Text="{Binding Temp_PV}" />
-                                            <Border Background="{StaticResource ControlFixedModeBrush}" CornerRadius="4">
-                                                <TextBlock Foreground="White" Text="F" />
-                                            </Border>
+                                            <TextBlock
+                                                Width="10"
+                                                Height="15"
+                                                hc:BorderElement.CornerRadius="4"
+                                                Background="{StaticResource ControlFixedModeBrush}"
+                                                Foreground="White"
+                                                Text="F" />
                                         </hc:UniformSpacingPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
